UI: better directory view alignment, text better aligned vs icons, buttons are not so wide. Directory view has now fixed width (enough for 8+3 filenames).

--- a/src/atari_http_server/ui/css.css
+++ b/src/atari_http_server/ui/css.css
@@ -36,7 +36,7 @@ a:active {
 
     footer {
         width:100%;
-        height:auto;
+        height:2em;
         position: fixed; 
         bottom:0px;
         float:none;
@@ -59,7 +59,7 @@ a:active {
     }
 
     div #mainSection{
-      height: 100vh; 
+      height: 80vh; 
     }
 
     div #fileManagementBlock{
@@ -71,11 +71,11 @@ a:active {
     }
 
     div #directoryListView {
-        width:15%;
+        width:185px;
         height:100%;
         overflow-x:hidden;
         overflow-y:auto;
-        padding-top:2em;
+        padding-top:18px;
     }
 
     div  #directoryView {
@@ -210,15 +210,20 @@ p {
 
 .directoryButton {
     display: inline-block;
-    margin-right: 0px;
     background: #ccc;
     cursor: pointer;
     border-radius: 10px;
     border: 2px solid #ccc;
-    padding-top: 2px;
-    margin-left: 0px;
-    width: 225px;
+    width: auto;
+    height:2em;
+    min-width: 140px;
+    margin-left: 25px;
     margin-top: 1px;
+    margin-right: 0px;
+    padding-top: 2px;
+    padding-left: 15px;
+    float: left;
+    text-align: left;
 }
 
 .directoryButton:hover{
@@ -227,11 +232,14 @@ p {
 
 .directoryButton img {
    float: left;
+   margin:0px;
+   padding:0px;
 }
 
-.directoryButton text {
-   float: left;
+.directoryButton span {
+  padding-left:5px;
 }
+
 
 .button {
   display: inline-block;
@@ -252,16 +260,18 @@ div #fileElem {
 
 div #lowerBar{
   width: 100%;
-  height: 100%;
-  bottom: 25px;
+  height: 20vh;
   overflow-x: hidden;
   overflow-y: auto; 
   background: black;
+  position: fixed; 
+  bottom:0px;
 }
 
 .divHorizontal {
   width :33%;
   min-height: 250px;
+  max-height:400px;
   float:left;
   color : white;
   padding-bottom:25px;
@@ -269,6 +279,7 @@ div #lowerBar{
   font-size: 9px;
   font-family: sans-serif;
   display:block;
+  overflow:auto;
 }
 
 .uploadStateInfo{
